--- a/modules/ROOT/pages/conflicts.adoc
+++ b/modules/ROOT/pages/conflicts.adoc
@@ -10,7 +10,7 @@ The ownCloud desktop client uploads local changes and downloads remote changes. 
 
 Imagine there is a file called `mydata.txt` your synchronized folder. It has not changed for a while and contains the text "contents" locally and remotely. Now, nearly at the same time you update it locally to say "_local contents_" while the file on the server gets updated to contain "_remote contents_" by someone else.
 
-When attempting to upload your local changes the desktop client will notice that the server version has also changed. It creates a conflict and you will now have two files on your local machine:
+When attempting to upload your local changes the desktop client will notice that the server version has also changed. It creates a conflict, and you will now have two files on your local machine:
 
 * `mydata.txt` containing "_remote contents_"
 * `mydata (conflicted copy 2018-04-10 093612).txt` containing "_local contents_"
@@ -23,8 +23,8 @@ To resolve this conflict, open both files, compare the differences and copy your
 
 == Uploading Conflicts (experimental)
 
-By default the conflict file (the file with "conflicted copy" in its name that contains your local conflicting changes) is not uploaded to the server. The idea is that you, the author of the changes, are the best person for resolving the conflict and showing the conflict to other users might create confusion. 
+By default, the conflict file (the file with "conflicted copy" in its name that contains your local conflicting changes) is not uploaded to the server. The idea is that you, the author of the changes, are the best person for resolving the conflict and showing the conflict to other users might create confusion.
 
 However, in some scenarios it makes a lot of sense to upload these conflicting changes such that local work can become visible even if the conflict won't be resolved immediately.
 
-In the future there might be a server-wide switch for this behavior. For now it can already be tested by setting the environment variable: `OWNCLOUD_UPLOAD_CONFLICT_FILES = 1`.
+In the future there might be a server-wide switch for this behavior. For now, it can already be tested by setting the environment variable: `OWNCLOUD_UPLOAD_CONFLICT_FILES = 1`.
